--- a/package.json
+++ b/package.json
@@ -27,12 +27,14 @@
     "@nestjs/mongoose": "^10.0.1",
     "@nestjs/passport": "^10.0.2",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/schedule": "^3.0.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^2.4.3",
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
+    "node-cron": "^3.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
