--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "class-validator": "^0.14.0",
     "cookie-parser": "^1.4.6",
     "jsonwebtoken": "^9.0.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.0",
     "node-cron": "^3.0.2",
     "passport": "^0.6.0",
@@ -47,6 +48,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/lodash": "^4.14.201",
     "@types/node": "^20.3.1",
     "@types/passport": "^1.0.13",
     "@types/passport-jwt": "^3.0.10",
